# linen-lang

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
src/: main.c
tests/: main.c
